# openglGlass

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenGlGlass.sln  vcpkg-configuration.json  vcpkg.json
include/assimp/: revision.h
include/glad/: glad.h
include/learnopengl/: model.h  shader_s.h
lib/: assimp-vc143-mt.lib  glfw3.lib
src/: glad.c  glass_shader.frag  main.cpp  smoke.frag
